knoppen werken, focus niet

--- a/opdracht2/index.html
+++ b/opdracht2/index.html
@@ -7,7 +7,21 @@
 </head>
 <body>
     <h1>Welkom bij deze online fotoboek-service</h1>
-    <h2>Hieronder staan uw foto's. Gebruik </h2>
+    <h2>Hieronder staan uw foto's. Gebruik uw pijltjes-toetsen of door de foto's te scrollen.</h2>
 
+    <div>
+        <button></button>
+        <img id="center" src="img/foto1.jpg" alt="foto1">
+        <button></button>
+    </div>
+    <div class="bar">
+        <img src="img/foto1.jpg" alt="foto1">
+        <img src="img/foto2.jpg" alt="foto2">
+        <img src="img/foto3.jpg" alt="foto3">
+        <img src="img/foto4.jpg" alt="foto4">
+    </div>
+
+
+<script src="script.js"></script>
 </body>
 </html>
