--- a/opdracht3/tutorial volgen/index.html
+++ b/opdracht3/tutorial volgen/index.html
@@ -9,13 +9,14 @@
       <header>
         <h1>Kan ik vandaag kitesurfen?</h1>
       </header>
+      <aside>
+       </aside>
        <main>
           <h2></h2>
           <img src="" alt="">
-          <button onclick="Uitslag()">Kan ik vandaag kitesurfen?</button>
+          <button>Check het weer</button>
        </main>
-       <aside>
-       </aside>
+
     <script src="script/script.js"></script>
 <!--    <script src="script/script.js"></script>-->
   </body>
