--- a/opdracht3/tutorial volgen/index.html
+++ b/opdracht3/tutorial volgen/index.html
@@ -12,12 +12,12 @@
       <aside>
        </aside>
        <main>
-          <h2></h2>
-          <img src="" alt="">
-          <button>Check het weer</button>
+            <h2></h2>
+            <img src="" alt="">
+            <button name=Amsterdam>Amsterdam</button>
+            <button name=Scheveningen>Scheveningen</button>
+            <button name=Zandvoort>Zandvoort</button>
        </main>
-
     <script src="script/script.js"></script>
-<!--    <script src="script/script.js"></script>-->
   </body>
 </html>
