--- a/opdracht3/tutorial volgen/index.html
+++ b/opdracht3/tutorial volgen/index.html
@@ -14,9 +14,12 @@
        <main>
             <h2></h2>
             <img src="" alt="">
-            <button name=Amsterdam>Amsterdam</button>
-            <button name=Scheveningen>Scheveningen</button>
-            <button name=Zandvoort>Zandvoort</button>
+            <article>
+            <button value=Amsterdam>Amsterdam</button>
+            <button value=Scheveningen>Scheveningen</button>
+            <button value=Zandvoort>Zandvoort</button>
+            </article>
+            <section></section>
        </main>
     <script src="script/script.js"></script>
   </body>
