--- a/opdracht3/tutorial volgen/index.html
+++ b/opdracht3/tutorial volgen/index.html
@@ -13,13 +13,12 @@
        </aside>
        <main>
             <h2></h2>
-            <img src="" alt="">
+            <img class="gif" src="" alt="">
             <article>
             <button value=Amsterdam>Amsterdam</button>
             <button value=Scheveningen>Scheveningen</button>
             <button value=Zandvoort>Zandvoort</button>
-            </article>
-            <section></section>
+           </article>
        </main>
     <script src="script/script.js"></script>
   </body>
