user controls, loading state, extra animations

--- a/opdracht3/tutorial volgen/index.html
+++ b/opdracht3/tutorial volgen/index.html
@@ -12,6 +12,7 @@
       <aside>
        </aside>
        <main>
+           <section class="loadingscreen"><img src="img/loading.gif" alt=""></section>
             <h2></h2>
             <img class="gif" src="" alt="">
             <article>
